data/derived/sp14/progs/unify/prog0834.ml.out
Characters 44-51:
  clone x::[] (n-1);;
  ^^^^^^^
Error: This expression has type 'a -> 'b list
       but an expression was expected of type 'b
       The type variable 'b occurs inside 'a -> 'b list
